Se agrego etiqueta de Google

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <meta name="description" content= "Hola! Mi nombre es Leslie y soy Ingeniera de Sistemas." />
     <meta name="keywords" content="leslierosazza, Frontend, Diseñadora Web"/>
     <meta http-equiv="cache-control" content="no-cache"/>
-
+    <!-- Google tag (gtag.js) --> 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-1038854953">
+    </script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-1038854953'); </script>
 </head>
 <body>
     <header class="header">
