Actualizacion del index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p class="color-black fw ff-1 uppercase size-25">Leslie Gabriela Velásquez Rosazza</p><br>
             <p class="color-black fw ff-1 uppercase size-18">Diseño y Desarrollo de Páginas Web</p>
             <div class="header__LlamadaAccion--btnaccion">
-                <a class="btn btn-amarillo"> COTIZA</a>
+                <a href="https://wa.me/51934125104?text=Hola%2C+estoy+interesado+en+cotizar+para+una+p%C3%A1gina+web." target="_blank" class="btn btn-amarillo"> COTIZA</a>
             </div>
         </div>
         <!-- <div class="header__banner">
@@ -56,7 +56,10 @@
                 <div class="perfil__contenedor__contenido">
                     <div class="perfil__contenedor__contenido__descripcion">
                         <p class="perfil__contenedor__contenido__descripcion--texto pl-1 pb-1 ff-1 text-justify">
-                            Hola! Mi nombre es Leslie y soy Ingeniera de Sistemas de la Universidad privada Inca Garcilaso De La Vega - UIGV con experiencia en la gestión de sitios web como Joomla, drupal, wordpress, experiencia en el diseño y desarrollo en HTML, CSS, JavaScript y SASS, así  como en la instalación y configuración de sistemas operativos Windows / Linux y configuración de redes y como Operador Informático y Operador de Centro de Cómputo. Con certificación en Programación Básica, diseño HTML y CSS para email, Responsive Design,  Illustrator, Photoshop, sistema de control de versiones git y github. Me he especializado en Desarrollo web profesional y estoy haciendo un Master Universitario en Diseño y Desarrollo de Interfaz de Usuario Web en la Universidad Internacional de La Rioja - UNIR. Me gusta el diseño y desarrollo web. 
+                            Soy titulada técnica en Computación e informática en el instituto IDAT, también soy titulada de la carrera de Ingeniera de sistemas en la Universidad Inca Garcilaso de La Vega – UIGV y estoy cursando el máster universitario en Diseño y Desarrollo de Interfaz de Usuario Web (Front-End Design & Development).
+Tengo conocimientos en diseño y desarrollo de páginas web en HTML 5, CSS 3, JavaScript, también manejo frameworks como React js, Angular, Vue js; así como también Bootstrap, style components. Tengo conocimientos en PHP y MySql
+Manejo CMS como Joomla, Drupal y también Sistema de gestión de aprendizaje E-Learning Moodle.
+
                         
                         </p>
                     </div>
@@ -89,6 +92,19 @@
             <div class="portafolio__contenedor__columna">
             <article class="portafolio__contenedor__columna__item">
                 <div class="portafolio__contenedor__columna__item__imgBox">
+                    <img src="img/portafolio/Fondo-Socioambiental-del-Peru.png" alt="Fondo Socioambiental del Perú">
+                    <!-- <div>
+                        <i class="fas fa-plus"></i> 
+                    </div> -->
+                </div>
+                <div class="portafolio__contenedor__columna__item__data">
+                    <a href="https://fondoperu.org.pe/" target="_blank">
+                        <p class="resumen-n3 text-italic text-center">Fondo Socioambiental del Perú</p>
+                    </a>
+                </div>
+            </article>
+            <article class="portafolio__contenedor__columna__item">
+                <div class="portafolio__contenedor__columna__item__imgBox">
                     <img src="img/portafolio/Pienik.png" alt="Construcción y minería Pienik">
                     <!-- <div>
                         <i class="fas fa-plus"></i> 
@@ -111,24 +127,23 @@
                     <a href="https://leslierosazza.github.io/maqueta-actual/" target="_blank">
                         <p class="resumen-n3 text-italic text-center">Prepárate ante un sismo</p>
                     </a>
-                    
-                </div>
-            </article>
-            <article class="portafolio__contenedor__columna__item">
-                <div class="portafolio__contenedor__columna__item__imgBox">
-                    <img src="img/portafolio/medidas_seguridad.png" alt="Medidas de seguridad vial a tener en cuenta por fiestas de fin de año">
-                    <!-- <div>
-                        <i class="fas fa-plus"></i> 
-                    </div> -->
-                </div>
-                <div class="portafolio__contenedor__columna__item__data">
-                    <a href="https://leslierosazza.github.io/infografia2/" target="_blank">
-                        <p class="resumen-n3 text-italic text-center">Medidas de seguridad</p>
-                    </a>
                 </div>
             </article>
             </div>
             <div class="portafolio__contenedor__columna">
+                <article class="portafolio__contenedor__columna__item">
+                    <div class="portafolio__contenedor__columna__item__imgBox">
+                        <img src="img/portafolio/medidas_seguridad.png" alt="Medidas de seguridad vial a tener en cuenta por fiestas de fin de año">
+                        <!-- <div>
+                            <i class="fas fa-plus"></i> 
+                        </div> -->
+                    </div>
+                    <div class="portafolio__contenedor__columna__item__data">
+                        <a href="https://leslierosazza.github.io/infografia2/" target="_blank">
+                            <p class="resumen-n3 text-italic text-center">Medidas de seguridad</p>
+                        </a>
+                    </div>
+                </article>
                 <article class="portafolio__contenedor__columna__item">
                     <div class="portafolio__contenedor__columna__item__imgBox">
                         <img src="img/portafolio/guitarras-invie.png" alt="Guitarras invie">
@@ -155,6 +170,8 @@
                         </a>  
                     </div>
                 </article>
+            </div>
+            <div class="portafolio__contenedor__columna">
                 <article class="portafolio__contenedor__columna__item">
                     <div class="portafolio__contenedor__columna__item__imgBox">
                         <img src="img/portafolio/Quiz-Ninja.png" alt="Quiz-Ninja">
@@ -168,7 +185,7 @@
                         </a>
                     </div>
                 </article>
-                </div>
+            </div>
         </div>
     </section>
     <section class="contacto pt-10 pb-10" id="contactos">
